assets/css/main.css
/* ... */
#navigation-bar .nav-option{
	padding: 18px;
	font-size: 16px;
	text-align: center;
	float: left;
	text-decoration: none;
	color: #1a222c;
}

#particles-js {
	background: #1a222c;
	display: flex;
	vertical-align: bottom;
	min-height: 100vh;
	background-repeat: no-repeat;
	background-size: cover;
	background-attachment: fixed
}

#particles-js .particles-js-canvas-el {
	height: 100vh!important
}

.header {
	font-family: 'Montserrat', sans-serif;
	z-index: 1;
	text-align: center;
	color: #fff;
	position: absolute;
	top: 50%;
	left: 50%;
	margin: 0 auto;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%)
}

.header .site-title {
	font-size: 50px;
	display: block;
	line-height: 1;
	color: #fff
}

@media only screen and (min-width:768px) {
	.header .site-title {
		margin: 0;
		font-size: 76px
	}
}

.header #site-description {
	font-size: 20px;
	display: block;
	line-height: 1;
	color: #fff;
	margin-top: 10px
}

@media only screen and (min-width:768px) {
	.header #site-description {
		font-size: 26px
	}
}

.header-links {
	margin: 10px
}

.header-links .link {
	color: #fff;
	text-decoration: none;
	font-size: 15px;
	margin: 10px
}

@media only screen and (min-width:768px) {
	.header-links .link {
		font-size: 20px
	}
}

.header-icons {
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center
}

.header-icons a {
	border: none!important;
	padding: none;
	margin: none
}

.down,
.header-icons .icon {
	color: #fff;
	text-align: center
}

.header-icons .icon {
	height: 20px;
	padding: 10px;
	border-radius: 50%;
	transition: all .5s;
	width: 20px;
	font-size: 20px;
	margin: 5px;
	border: 2px solid #fff
}

.header-icons .icon:active,
.header-icons .icon:hover {
	color: #1a222c;
	background: #fff
}

@media only screen and (min-width:768px) {
	.header-icons .icon {
		width: 30px;
		height: 30px;
		font-size: 30px;
		line-height: 30px
	}
}

.down {
	position: absolute;
	bottom: 25px;
	width: 100%;
	margin: 0 auto;
	display: block;
	font-size: 30px;
	line-height: 30px;
	cursor: pointer;
	border: none!important;
}

.down .icon {
	position: absolute;
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	width: 100px;
	height: 100px;
	fill: #fff;
	-webkit-animation: pulse 1.3s infinite;
	animation: pulse 1.3s infinite
}

.down .icon:active,
.down .icon:hover,
.footer a:active,
.footer a:hover {
	color: #4b5664
}

#about {
	background-color:rgb(241, 241, 241);
	font-size: 120%;
	margin: 0 auto;
	min-height:100vh;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
}

#about svg {
	width: 60px!important;
	height: auto
}

.tech {
	margin: 10px;
	flex: 1 1 0
}

.tech h2,
.tech h3,
.user-details h1,
body {
	font-weight: 400
}

.user {
	text-align: center;
	font-size: 60px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-between
}

.user p {
	font-size: 16px
}

@media only screen and (min-width:768px) {
	.user {
		flex-wrap: nowrap;
		font-size: 75px
	}
}

.user-details {
	text-align: center;
	margin: 5px auto;
	max-width: 960px;
	width: 90%;
}

.user-details .profile-image {
	position: relative;
    	top: 50px;
}

.user-details p {
	text-align: left;
}

#education {
	min-height:100vh;
	font-size: 120%;
	margin: 0 auto;
	background-color: #4d5158;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
}

#section-content{
	top: 50%;
	left: 50%;
}

#education h1{
	font-weight: 400;
	color: #fff;
	text-align: center;
	margin-top: 0px;
}

#uno-info {	
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-content: center;
	margin-bottom: 50px;
}

#uno-info img {
	margin-block: auto;
	width: 130px;
	height: 130px;
}

#student-info {
	margin-top: auto;
	margin-bottom: auto;
}

#student-info h2,h3,h4{
	text-align: left;
	color: #fff;
	line-height: 5px;
	margin-left: 8px;
	padding-top: 0px;
	font-weight: 400;
}

.course-detail {
	display: flex;
	justify-content: center;
	align-items: flex-start;
	align-content: center;
	color: #fff;
}

.courses{
	margin-bottom: 50px;
}

.footer {
	background: #1a222c;
	padding: 10px 0;
	text-align: center;
	color: #fff
}

.footer a {
	text-decoration: none;
	margin: 0;
	color: #fff
}

